[tool.poetry]
name = "django-hashids"
version = "0.3.0"
readme = "README.md"
description = "Non-intrusive hashids library Django"
authors = ["Shen Li <dustet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4"
hashids = ">=1.0.2"

[tool.poetry.dev-dependencies]
django = "^3.0.7"
pytest = "^5.4.3"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-django = "^3.9.0"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
