[tool.poetry]
name = "django-hashids"
version = "0.7.0"
readme = "README.md"
description = "Non-intrusive hashids library for Django"
homepage = "https://github.com/ericls/django-hashids"
repository = "https://github.com/ericls/django-hashids"
keywords = ["django", "hashids", "hashid"]
authors = ["Shen Li <dustet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<4"
hashids = ">=1.0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python = ">=3.8.1,<4"
django = "^3.0.7"
pytest = "^6.2.5"
black = "^22.0.3"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
flake8 = { version = "^7.0.0", python = ">=3.8.1" }
isort = "^4.3.21"

[tool.poetry.group.testpg]
optional = true

[tool.poetry.group.testpg.dependencies]
psycopg2-binary = { version = "^2.8.6", python = ">=3.9" }

[tool.poetry.group.testmysql]
optional = true

[tool.poetry.group.testmysql.dependencies]
mysqlclient = { version = "^2.2.3", python = ">=3.8" }

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.core.masonry.api"
